resources/css/components/_sidebar.scss
@use '../design';

$_sidebar_space_reserved_from_breakpoint: 'lg';

.sidebar {
  position: fixed;
  z-index: design.app-z-index('sidebar');
  top: 0;
  bottom: 0;
  padding: design.app-value('sidebar-spacing');
  margin: 0 !important;
  overflow: auto;
  width: 100%;
  max-width: design.app-value('sidebar-max-width');
  background-color: design.app-color('sidebar-bg');
  border-right: design.app-value('sidebar-border') solid design.app-color('sidebar-border-color');
  box-sizing: border-box;
  display: flex;
  flex-flow: column nowrap;
  justify-content: stretch;
  gap: design.app-value('sidebar-spacing');
  will-change: transform;
  transition: transform .1s ease-in;

  @media print {
    display: none;
  }

  @include design.if-prefers-reduced-motion {
    transition: none !important;
  }

  @mixin sidebar-is-open-all {
    transform: translateX(0);
  }
  @mixin sidebar-is-open-desktop {
    &.position-left + .sidebar-spacing-wrapper {
      padding-left: design.app-value('sidebar-max-width');
    }

    &.position-right + .sidebar-spacing-wrapper {
      padding-right: design.app-value('sidebar-max-width');
    }
  }
  @mixin sidebar-is-closed {
    &.position-left {
      left: 0;
      transform: translateX(calc(-1 * #{design.app-value('sidebar-max-width')}));
    }

    &.position-right {
      right: 0;
      transform: translateX(#{design.app-value('sidebar-max-width')});

      .sidebar-top {
        flex-direction: row-reverse;
      }
    }
  }

  &.is-open {
    @include sidebar-is-open-all;
    @include design.screen-above($_sidebar_space_reserved_from_breakpoint) {
      @include sidebar-is-open-desktop;
    }
  }

  &.is-closed {
    @include sidebar-is-closed;
  }

  &:not(.is-open):not(&.is-closed) {
    @include design.screen-below($_sidebar_space_reserved_from_breakpoint) {
      @include sidebar-is-closed;
    }
    @include design.screen-above($_sidebar_space_reserved_from_breakpoint) {
      @include sidebar-is-open-desktop;
    }
  }

  > * {
    box-sizing: border-box;
  }

  .sidebar-top {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    flex: 0 0 calc(#{design.app-value('header-height')} - #{design.app-value('header-border')} - #{design.app-value('sidebar-spacing')} * 2);
    border-bottom: design.app-value('sidebar-divider-border') solid design.app-color('sidebar-divider-color');
    padding-bottom: design.app-value('sidebar-spacing');
  }

  .sidebar-content {
    flex: 0 1 100%;
    min-height: 0;
    overflow: auto;
  }

  .sidebar-bottom {
    flex: 0 0 auto;
    border-top: design.app-value('sidebar-divider-border') solid design.app-color('sidebar-divider-color');
    padding-top: design.app-value('sidebar-spacing');

    .actions-wrapper {
      display: flex;
      flex-flow: column nowrap;
      gap: design.app-value('nav-element-spacing-horizontal');

      > li {
        display: block;
        padding: 0;

        &.parallel-actions {
          display: flex;
          flex-flow: row nowrap;
          align-items: center;
          justify-content: space-between;
        }

        > a {
          margin-top: 0;
          margin-bottom: 0;
          border: 2px solid transparent;
        }
      }
    }
  }
}

.sidebar-close-overlay {
  position: fixed;
  z-index: design.app-z-index('sidebar-close-overlay');
  background-color: rgba(0, 0, 0, .75);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  cursor: pointer;

  @include design.screen-above($_sidebar_space_reserved_from_breakpoint) {
    display: none !important;
  }
}

.sidebar-content {
  padding: design.app-value('sidebar-spacing');

  section {
    margin-bottom: design.app-value('sidebar-section-spacing');

    header {
      font-weight: bold;
      text-align: center;
      margin-bottom: design.app-value('sidebar-section-spacing');
      font-size: design.app-value('sidebar-section-heading-font');
    }
  }

  a {
    color: design.app-color('content-link');
  }
}

.sidebar-spacing-wrapper {
  position: relative;
  transition: padding .1s ease-in-out;

  @media print {
    padding: 0 !important;
  }
}

.theme-button-tooltip {
  text-align: center;

  .theme-button-tooltip-reset-hint {
    display: block;
    font-size: .75rem;
  }
}

.build-info {
  opacity: 0.4;
  font-size: 0.75em;
  font-family: monospace;
  align-self: center;
}

